--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "prop-types": "^15.7.2",
     "react": "^16.7.0",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.7.0",
     "react-html-parser": "^2.0.2",
     "react-redux": "^7.0.1",
