--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "webpack-dev-server --mode development --open --hot",
     "build": "webpack --mode production",
     "lint": "eslint src/",
-    "postinstall": "npm run build"
+    "server": "http-server dist"
   },
   "husky": {
     "hooks": {
